--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,17 @@ code {
   border-radius: 8px;
   margin-top: 50px;
 }
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+
+
+
 h1 {
   color: #333;
   text-align: center;
@@ -42,5 +53,27 @@ h1 {
   border-radius: 8px;
 }
 
+.daily-response-time-chart{
+  background-color: #9dbbe7;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.weekly-response-time-chart{
+  background-color: #f7bfe0;
+  padding: 20px;
+  border-radius: 8px;
+}
 
 
+.country-usage-chart{
+  background-color: #faa287;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.platform-usage-chart{
+  background-color: #cae48f;
+  padding: 20px;
+  border-radius: 8px;
+}
